Install bootstrap for styling

--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,12 @@
               "projects/host-app/src/assets"
             ],
             "styles": [
-              "projects/host-app/src/styles.css"
+              "projects/host-app/src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
