--- a/angular.json
+++ b/angular.json
@@ -307,7 +307,7 @@
 			"prefix": "app",
 			"architect": {
 				"build": {
-					"builder": "@angular-devkit/build-angular:browser",
+					"builder": "ngx-build-plus:browser",
 					"options": {
 						"outputPath": "dist/orders-app",
 						"index": "projects/orders-app/src/index.html",
@@ -323,7 +323,9 @@
 						"styles": [
 							"projects/orders-app/src/styles.css"
 						],
-						"scripts": []
+						"scripts": [],
+						"extraWebpackConfig": "projects/orders-app/webpack.config.js",
+						"commonChunk": false
 					},
 					"configurations": {
 						"production": {
@@ -339,7 +341,8 @@
 									"maximumError": "4kb"
 								}
 							],
-							"outputHashing": "all"
+							"outputHashing": "all",
+							"extraWebpackConfig": "projects/orders-app/webpack.prod.config.js"
 						},
 						"development": {
 							"buildOptimizer": false,
@@ -353,21 +356,28 @@
 					"defaultConfiguration": "production"
 				},
 				"serve": {
-					"builder": "@angular-devkit/build-angular:dev-server",
+					"builder": "ngx-build-plus:dev-server",
 					"configurations": {
 						"production": {
-							"browserTarget": "orders-app:build:production"
+							"browserTarget": "orders-app:build:production",
+							"extraWebpackConfig": "projects/orders-app/webpack.prod.config.js"
 						},
 						"development": {
 							"browserTarget": "orders-app:build:development"
 						}
 					},
-					"defaultConfiguration": "development"
+					"defaultConfiguration": "development",
+					"options": {
+						"port": 3000,
+						"publicHost": "http://localhost:3000",
+						"extraWebpackConfig": "projects/orders-app/webpack.config.js"
+					}
 				},
 				"extract-i18n": {
-					"builder": "@angular-devkit/build-angular:extract-i18n",
+					"builder": "ngx-build-plus:extract-i18n",
 					"options": {
-						"browserTarget": "orders-app:build"
+						"browserTarget": "orders-app:build",
+						"extraWebpackConfig": "projects/orders-app/webpack.config.js"
 					}
 				},
 				"test": {
